# Forex_Order_Managment_Service

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  compile_commands.json  setup.sh
.github/: copilot-instructions.md
build-debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build-debug/.cmake/api/v1/reply/: cache-v2-9cc55aab900070ea1867.json  cmakeFiles-v1-10f9fe6d335d53d02f63.json  codemodel-v2-257be1baf5c37dfa4533.json  directory-.-Debug-a24bed01492e6d9c78e7.json  index-2025-08-20T12-52-17-0096.json  target-HeaderTest-Debug-ea08d72d211a05869a1d.json  target-OMS-Debug-3e89cd675f2f087f394c.json  target-clean_all-Debug-2d606f95e15c1987bace.json  target-format-Debug-5f693463b49870a75585.json  target-quick_build-Debug-0a17ae6719695e960488.json  target-regenerate_idl-Debug-a6f2c37f401dcf083e10.json  target-run_tests-Debug-71622f97b8ad2827e72b.json  target-show_config-Debug-eb5dae5ff5474c5630bd.json  target-show_sources-Debug-fa3cf06fa88afad8955d.json  toolchains-v1-03a96e96e4f953aa23fb.json
build-modules/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
cmake/: Dependencies.cmake  Sources.cmake  Tests.cmake  Utilities.cmake
common/: BasicDomainParticipant.h  Common.h  LoggerHelper.h
config/: fastdds_profile.xml  log4cxx.xml  symbols.json  users.json
dds/include/fastcdr/: config.h
dds/include/fastdds/: config.hpp
dds/include/foonathan/memory/: config_impl.hpp  container_node_sizes_impl.hpp
dds/lib/: libfastcdr.2.3.0.dylib  libfastcdr.2.dylib  libfastcdr.dylib  libfastdds.3.4.dylib  libfastdds.dylib  libfoonathan_memory-0.7.4.dylib
dds/lib/cmake/doctest/: doctestTargets.cmake
dds/lib/cmake/fastcdr/: fastcdr-config.cmake  fastcdr-shared-targets-release.cmake  fastcdr-shared-targets.cmake
dds/lib/foonathan_memory/cmake/: foonathan_memory-config-noconfig.cmake  foonathan_memory-config-version.cmake  foonathan_memory-config.cmake
dds/lib/pkgconfig/: asio.pc
dds/share/fastdds/cmake/: fast-discovery-server-targets.cmake  fastdds-config.cmake  fastdds-shared-targets-release.cmake  fastdds-shared-targets.cmake  optionparser-targets.cmake
idl/: ExecutionReport.idl  Header.idl  HeaderLogger.hpp  NewOrderSingle.idl  NewOrderSingleLogger.hpp  OrderMessage.idl  OrderResponseReport.idl  generate.sh
idl/idl/: ExecutionReport.hpp  ExecutionReportCdrAux.hpp  ExecutionReportCdrAux.ipp  ExecutionReportPubSubTypes.cxx  ExecutionReportPubSubTypes.hpp  ExecutionReportTypeObjectSupport.cxx  ExecutionReportTypeObjectSupport.hpp  Header.hpp  HeaderCdrAux.hpp  HeaderCdrAux.ipp  HeaderPubSubTypes.cxx  HeaderPubSubTypes.hpp  HeaderTypeObjectSupport.cxx  HeaderTypeObjectSupport.hpp  NewOrderSingle.hpp  NewOrderSingleCdrAux.hpp  NewOrderSingleCdrAux.ipp  NewOrderSinglePubSubTypes.cxx  NewOrderSinglePubSubTypes.hpp  NewOrderSingleTypeObjectSupport.cxx  NewOrderSingleTypeObjectSupport.hpp  OrderMessage.hpp  OrderMessageCdrAux.hpp  OrderMessageCdrAux.ipp  OrderMessagePubSubTypes.cxx  OrderMessagePubSubTypes.hpp  OrderMessageTypeObjectSupport.cxx  OrderMessageTypeObjectSupport.hpp  OrderResponseReport.hpp  OrderResponseReportCdrAux.hpp  OrderResponseReportCdrAux.ipp  OrderResponseReportPubSubTypes.cxx  OrderResponseReportPubSubTypes.hpp  OrderResponseReportTypeObjectSupport.cxx  OrderResponseReportTypeObjectSupport.hpp
include/: Adapter.hpp  Application.hpp  Calculator.hpp  ComposerThread.h  ConcurrentQueue.h  DataReaderContainer.h  DataWriterContainer.hpp  ExecutionReportDataReaderListenerImpl.h  Logger.hpp  OrderListener.hpp  OrderManagementService.hpp  OrderRouter.hpp  RiskService.hpp  RiskServiceImpl.hpp  RiskValidator.hpp
log4cxx/include/log4cxx/: log4cxx.h
log4cxx/lib/: liblog4cxx.15.dylib  liblog4cxx.dylib
log4cxx/lib/cmake/log4cxx/: log4cxxConfig-noconfig.cmake  log4cxxConfig.cmake  log4cxxConfigVersion.cmake
log4cxx/lib/pkgconfig/: liblog4cxx.pc
modules/oms/: ExecutionCache.ixx
modules/position/: PositionService.ixx
modules/services/: IRiskService.ixx  RiskService.ixx
rust_client/: Cargo.toml
rust_client/src/: common.rs  dds_client.rs  lib.rs  main.rs  new_order_single.rs  order_message.rs
rust_client/src/execution_report/: execution_report.rs  execution_report_listener.rs  mod.rs
rust_client/src/fix_client/: fix_client.rs  mod.rs
rust_client/src/report/: execution_report.rs  execution_report_listener.rs  mod.rs  order_response_report.rs  order_response_report_listener.rs
scripts/: build.sh  build_headers.sh  run.sh  test_headers.sh
src/: Adapter.cpp  Application.cpp  ExecutionReportDataReaderListenerImpl.cpp  OrderListener.cpp  OrderManagementService.cpp  OrderRouter.cpp  RiskServiceImpl.cpp  RiskValidator.cpp  header_test.cpp  main.cpp  module_test.cpp  modules_smoke_test.cpp  test_client.cpp
test/src/: simple_test.cpp  test_client.cpp
