[package]
name = "oms_rust_client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
rustdds = "0.11.5"
byteorder = "1.4"
metrics = "0.24.2"
quickfix = "0.2.0"
quickfix-msg44 = "0.2.0"
parking_lot = "0.12.4"
